# news_project

./: .gitignore  Makefile  README.md  my_database.db  pyproject.toml
app/: database.json  database.py  main.py  settings.py
app/admin/: views.py
app/auth/: crud.py  database.py  jwt_help.py  models.py  schemas.py  utils.py  validate.py  views.py
app/news/: crud.py  enums.py  models.py  read_news.py  ruoters.py  schemas.py  views.py
app/news/admin/: crud.py  schemas.py  views.py
app/news/likes/: crud.py  models.py  schemas.py  views.py
