[tool.poetry]
name = "news-project"
version = "0.1.0"
description = ""
authors = ["Nurlan-Aliev <nualiev612@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.40"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude='''
/(
    .git
    .coverage
    __pycache__
    .idea
)/
'''